# umlauts-fixer

./: ChangeLog.md  FixDuden.cabal  LICENSE  README.md
src/: Cleaner.hs  FixDuden.hs  Main.hs
src/FixDuden/: Internal.hs
test/: FixDudenSpec.hs
