Name:                   FixDuden
Version:                0.0.0
Author:                 Nicola Spesivtsev <nicola.spesivcev@gmail.com>
Maintainer:             Nicola Spesivtsev <nicola.spesivcev@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Executable fix_duden_encoding                        
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  main-is:              Main.hs
  Other-Modules:        FixDuden.Internal
  Build-Depends:        base >= 4 && < 5
                      , Hclip
                      , text
                      , mtl
                      , transformers
                      , bytestring

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      FixDuden
  Other-Modules:        FixDuden.Internal
  Build-Depends:        base >= 4 && < 5
                      , Hclip
                      , text
                      , mtl
                      , transformers
                      , bytestring

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
